--- a/frontend/myCrossing/package.json
+++ b/frontend/myCrossing/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
+    "ng-click-outside": "^7.0.1",
     "ngx-cookie-service": "^2.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
