Autorizacion completada con encriptacion

--- a/frontend/myCrossing/package.json
+++ b/frontend/myCrossing/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
+    "bootstrap": "^4.6.0",
+    "crypto-js": "^4.0.0",
+    "json-formatter-js": "^2.3.4",
+    "jsonformatter": "^0.7.0",
     "ngx-cookie-service": "^2.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
