--- a/frontend/myCrossing/package.json
+++ b/frontend/myCrossing/package.json
@@ -25,9 +25,10 @@
     "json-formatter-js": "^2.3.4",
     "jsonformatter": "^0.7.0",
     "ngx-cookie-service": "^2.1.0",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "webpack": "^4.0.0",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1100.3",
