--- a/frontend/myCrossing/package.json
+++ b/frontend/myCrossing/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.6.0",
     "crypto-js": "^4.0.0",
     "json-formatter-js": "^2.3.4",
