--- a/frontend/myCrossing/angular.json
+++ b/frontend/myCrossing/angular.json
@@ -13,7 +13,6 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "allowedCommonJsDependencies": ["crypto-js"],
             "outputPath": "dist/myCrossing",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -27,7 +26,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": ["node_modules/crypto-js/crypto-js.js"]
+            "scripts": []
           },
           "configurations": {
             "production": {
