--- a/project/myCrossing/package.json
+++ b/project/myCrossing/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
+    "ac-stalk-market-analyzer": "^1.0.1",
     "animal-crossing": "^7.3.0",
     "ngx-cookie-service": "^2.1.0",
     "rxjs": "^6.6.3",
