--- a/project/myCrossing/package.json
+++ b/project/myCrossing/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/build-webpack": "^0.1100.3",
-    "@angular/animations": "~10.1.6",
+    "@angular/animations": "^10.1.6",
     "@angular/common": "~10.1.6",
     "@angular/compiler": "~10.1.6",
     "@angular/core": "~10.1.6",
@@ -20,9 +20,13 @@
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "ac-stalk-market-analyzer": "^1.0.1",
+    "angular-calendar": "^0.28.22",
     "animal-crossing": "^7.3.0",
+    "date-fns": "^2.16.1",
     "jquery": "^3.6.0",
+    "ng-bootstrap": "^1.6.3",
     "ngx-cookie-service": "^2.1.0",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
