Tercer intento con nuevo package

--- a/project/myCrossing/package.json
+++ b/project/myCrossing/package.json
@@ -11,8 +11,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-webpack": "^0.1100.3",
-    "@angular/animations": "^10.1.6",
+    "@angular-devkit/build-webpack": "^0.1100.7",
+    "@angular/animations": "^10.2.5",
     "@angular/common": "~10.1.6",
     "@angular/compiler": "~10.1.6",
     "@angular/core": "~10.1.6",
@@ -20,16 +20,16 @@
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
-    "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "ac-stalk-market-analyzer": "^1.0.1",
-    "angular-calendar": "^0.28.22",
-    "animal-crossing": "^7.3.0",
-    "date-fns": "^2.16.1",
+    "angular-calendar": "^0.28.24",
+    "animal-crossing": "^7.4.0",
+    "date-fns": "^2.21.3",
     "jquery": "^3.6.0",
     "ng-bootstrap": "^1.6.3",
-    "ngx-cookie-service": "^2.1.0",
-    "rxjs": "^6.6.3",
-    "tslib": "^2.0.0",
+    "ngx-cookie-service": "^2.4.0",
+    "rxjs": "^6.6.7",
+    "tslib": "^2.2.0",
     "webpack": "^4.0.0",
     "zone.js": "^0.10.3"
   },
@@ -38,20 +38,20 @@
     "@angular/cli": "~10.1.7",
     "@angular/compiler-cli": "~10.1.6",
     "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.9",
     "@types/jquery": "^3.5.5",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "@types/node": "^12.20.13",
+    "codelyzer": "^6.0.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.6.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "^4.0.7"
   }
 }
