--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,14 @@ node_js:
   - '8'
 
 addons:
-  chrome: stable
+  apt:
+    packages:
+      - google-chrome-stable
+      
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start &
+  - sleep 3
 
 cache:
   directories:
@@ -16,4 +23,4 @@ install:
   - npm install
 
 script:
-  - npm run test -- --watch=false --no-progress
+  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
