--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,10 @@ node_js:
 
 addons:
   apt:
+    sources:
+      - google-chrome
     packages:
       - google-chrome-stable
-      
-before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start &
-  - sleep 3
 
 cache:
   directories:
