--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ script:
   - cd project/myCrossing
   - npm install
   - npm update
-  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  - npm test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
