--- a/.travis.yml
+++ b/.travis.yml
@@ -1,42 +1,36 @@
 dist: trusty
 sudo: false
 
-jobs:
-  include:
-    - language: php
-      php:
-        - 7.1.9
+language: node_js
+node_js:
+  - '12'
 
-      before_script:
-        - cd project/myCrossing
-        - sudo apt-get install apache2 libapache2-mod-fastcgi
-        # enable php-fpm
-        - sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf
-        - sudo a2enmod rewrite actions fastcgi alias
-        - echo "cgi.fix_pathinfo = 1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
-        - sudo sed -i -e "s,www-data,travis,g" /etc/apache2/envvars
-        - sudo chown -R travis:travis /var/lib/apache2/fastcgi
-        - ~/.phpenv/versions/$(phpenv version-name)/sbin/php-fpm
-        # configure apache virtual hosts
-        - sudo cp -f build/travis-ci-apache /etc/apache2/sites-available/000-default.conf
-        - sudo sed -e "s?%TRAVIS_BUILD_DIR%?$(pwd)?g" --in-place /etc/apache2/sites-available/000-default.conf
-        - sudo service apache2 restart
-        
-    - language: node_js
-      node_js:
-        - '12'
+services:
+  - mysql
+  
+addons:
+  chrome: stable
+  mariadb: '10.0'
 
-      services:
-        - mysql
-        
-      addons:
-        chrome: stable
-        mariadb: '10.0'
+cache:
+  directories:
+    - ./node_modules
 
-      cache:
-        directories:
-          - ./node_modules
+before_script:
+  - cd project/myCrossing
+  - sudo apt-get install apache2 libapache2-mod-fastcgi
+  # enable php-fpm
+  - sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf
+  - sudo a2enmod rewrite actions fastcgi alias
+  - echo "cgi.fix_pathinfo = 1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - sudo sed -i -e "s,www-data,travis,g" /etc/apache2/envvars
+  - sudo chown -R travis:travis /var/lib/apache2/fastcgi
+  - ~/.phpenv/versions/$(phpenv version-name)/sbin/php-fpm
+  # configure apache virtual hosts
+  - sudo cp -f build/travis-ci-apache /etc/apache2/sites-available/000-default.conf
+  - sudo sed -e "s?%TRAVIS_BUILD_DIR%?$(pwd)?g" --in-place /etc/apache2/sites-available/000-default.conf
+  - sudo service apache2 restart
 
-      script:
-        - npm install
-        - npm test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+script:
+  - npm install
+  - npm test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
