--- a/project/my-crossing-back/composer.json
+++ b/project/my-crossing-back/composer.json
@@ -1,11 +1,18 @@
-// {
-//     "require" : {
-//         "silex/silex": "^2.0.4",
-//         "monolog/monolog": "^1.22",
-//         "twig/twig": "^2.0",
-//         "symfony/twig-bridge": "^3"
-//     },
-//     "require-dev": {
-//         "heroku/heroku-buildpack-php": "*"
-//     }
-// }
+{
+    "name": "mplagb/mycrossing",
+    "description": "Proyecto Fin de Grado",
+    "type": "project",
+    "license": "proprietary",
+    "authors": [
+        {
+            "name": "Moises Pantion Loza",
+            "email": "pantion.loza.moises@gmail.com"
+        },{
+            "name": "Adrian Gracia Barroso",
+            "email": "adriaingra@gmail.com"
+        }
+    ],
+    "require":{
+        "php": ">=8.0.0"
+    }
+}
