--- a/project/my-crossing/angular.json
+++ b/project/my-crossing/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "myCrossing": {
+    "my-crossing": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/myCrossing",
+            "outputPath": "dist/my-crossing",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -63,19 +63,19 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "myCrossing:build",
+            "browserTarget": "my-crossing:build",
             "disableHostCheck": true
           },
           "configurations": {
             "production": {
-              "browserTarget": "myCrossing:build:production"
+              "browserTarget": "my-crossing:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "myCrossing:build"
+            "browserTarget": "my-crossing:build"
           }
         },
         "test": {
@@ -114,16 +114,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "myCrossing:serve"
+            "devServerTarget": "my-crossing:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "myCrossing:serve:production"
+              "devServerTarget": "my-crossing:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "myCrossing"
+  "defaultProject": "my-crossing"
 }
