--- a/project/my-crossing/package.json
+++ b/project/my-crossing/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.1",
     "jquery": "^3.6.0",
     "ng-bootstrap": "^1.6.3",
     "ngx-cookie-service": "^2.1.0",
